--- a/EB11BaseDatos/app/src/main/res/layout/activity_main2.xml
+++ b/EB11BaseDatos/app/src/main/res/layout/activity_main2.xml
@@ -26,7 +26,8 @@
         android:id="@+id/btnAgregar"
         android:layout_marginTop="148dp"
         android:layout_below="@+id/txtMatricula"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="Registro" />
 
     <EditText
         android:layout_width="wrap_content"
