--- a/EB11BaseDatos/app/src/main/res/layout/activity_main3.xml
+++ b/EB11BaseDatos/app/src/main/res/layout/activity_main3.xml
@@ -21,12 +21,11 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txtMatricula2"
+        android:id="@+id/txtMatricula"
+        android:hint="Matricula"
         android:layout_below="@+id/textCalificaciòn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="41dp"
-        android:hint="Matricula"
         android:layout_alignRight="@+id/textCalificaciòn"
         android:layout_alignEnd="@+id/textCalificaciòn" />
 
@@ -35,41 +34,37 @@
         android:layout_height="wrap_content"
         android:text="Consultar"
         android:id="@+id/btnConsultar"
-        android:layout_below="@+id/txtMatricula2"
-        android:layout_marginTop="33dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_centerVertical="true"
+        android:onClick="consultar"
+        android:layout_below="@+id/txtMatricula"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="Nombre"
-        android:layout_alignRight="@+id/btnConsultar"
-        android:layout_alignEnd="@+id/btnConsultar" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:layout_marginTop="39dp"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:hint="Calificaciòn"
-        android:layout_alignRight="@+id/btnConsultar"
-        android:layout_alignEnd="@+id/btnConsultar" />
+        android:layout_marginTop="52dp" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Guardar"
         android:id="@+id/btnGuadar"
-        android:layout_below="@+id/editText2"
-        android:layout_alignRight="@+id/btnConsultar"
-        android:layout_alignEnd="@+id/btnConsultar"
-        android:layout_marginTop="34dp" />
+        android:onClick="guardar"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="92dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtDatos"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtCali"
+        android:layout_below="@+id/txtDatos"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/txtMatricula"
+        android:layout_alignEnd="@+id/txtMatricula" />
+
 </RelativeLayout>
